freshrss/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freshrss
  namespace: freshrss
  labels:
    app: freshrss
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: freshrss
  template:
    metadata:
      labels:
        app: freshrss
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist
      containers:
        - name: freshrss
          image: freshrss/freshrss:1.29.1
          ports:
            - name: freshrss
              containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /var/www/FreshRSS/data
            - name: extensions
              mountPath: /var/www/FreshRSS/extensions
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: freshrss-data-pvc
        - name: extensions
          persistentVolumeClaim:
            claimName: freshrss-extensions-pvc
