freshrss/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freshrss-ts
  namespace: freshrss
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: freshrss
      port:
        number: 80
  tls:
    - hosts:
        - rss
